src/App.css
* {
  box-sizing: border-box;
  color: #333;
}

.app-header{
  text-align: center;
  border: 2px solid;
}

.container{
  display:flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.choose{
  flex:1;
  padding-left: 10px;
}

.options{
  border: 1px solid;
  padding: 5px 3px;
  margin-bottom: 10px;
}

.template-label{
  padding-left: 5px;
  padding-right: 8px;

}

.color-label{
  padding-left:25px;
  padding-right: 8px;
}

.fields{
  margin-top:5px;

}

.radar{
  flex:1.5;
  padding-left:50px;
}

.field-labels{
  display: flex;
  flex-direction: row;
}

.input-row{
  display: flex;
  flex-direction: row;
}

.stat{
  flex: 3;
}

.val{
  flex:1;
}

.input{
  width:0;

}

.delete{
  width: 32px;
  height: 32px;
  opacity: 0.3;
  width: 15px;
  padding-left: 5px;
}

.delete:hover {
  opacity: 1;
  cursor: pointer;
}

